--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>goodmorning</title>
     <link rel="stylesheet" href="css/style.css">
+    <audio autoplay loop>
+      <source src = "MASUKAN NAMA AUDIO"
+       type="audio/mp3"/>
 </head>
 <body>
     <div id="gallery">
