--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <audio autoplay loop>
       <source src = "MASUKAN NAMA AUDIO"
-       type="audio/mp3"/>
+       type="ssstik.io_1669187704714.mp3"/>
 </head>
 <body>
     <div id="gallery">
