--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>goodmorning</title>
     <link rel="stylesheet" href="css/style.css">
     <audio autoplay loop>
-      <source src = "MASUKAN NAMA AUDIO"
-       type="ssstik.io_1669187704714.mp3"/>
+      <source src = "ssstik.io_1669187704714.mp3"
+       type="audio/mp3"/>
 </head>
 <body>
     <div id="gallery">
